# process_modeling

./: README.md  pyproject.toml
experiences/exp2/: PhotovoltaicCell_BuckConversor.ipynb
experiences/exp3/: Untitled.ipynb  mversion.ipynb
experiences/exp4/: NumericQuestions.ipynb
