[tool.poetry]
name = "process-simulation"
version = "0.1.0"
description = "Process simulation related with the process modeling and simulation course in UFSe cadCAD package"
authors = ["Yves Fracari"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.2"
numpy = "^1.20.1"
cadCAD = "^0.4.23"
jupyter = "^1.0.0"
notebook = "^6.2.0"
plotly = "^4.14.3"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
